# secreteriat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  TODO.md  config_template.toml
src/: main.rs
