[package]
name = "secreteriat"
version = "1.1.0"
authors = ["William Culhane <sxroka@gmail.com>"]
edition = "2018"
description = "A Discord bot for use in managing the Langford Discord guild"
repository = "https://github.com/LEARAX/secreteriat"
license = "Unlicense"
keywords = ["discord", "bot", "chat"]


[dependencies]
serenity = "0.8.1"
serde = {version = "1.0.106", features = ["derive"]}
toml = "0.5.6"
lazy_static = "1.4.0"
