[package]
name = "secreteriat"
version = "1.2.0"
authors = ["William Culhane <sxroka@gmail.com>"]
edition = "2018"
description = "A Discord bot for managing the Langford Discord guild"
repository = "https://github.com/LEARAX/secreteriat"
license = "Unlicense"
keywords = ["discord", "bot", "chat"]

[package.metadata.release]
no-dev-version = true
pre-release-hook = ["cargo", "fmt"]

[dependencies]
serenity = "0.8.1"
serde = {version = "1.0.106", features = ["derive"]}
toml = "0.5.6"
lazy_static = "1.4.0"
trigram = "0.4.4"
